tests/ui/async-await/async-closures/post-mono-higher-ranked-hang.current.stderr
error: reached the recursion limit while instantiating `<{async closure body@$DIR/post-mono-higher-ranked-hang.rs:48:68: 50:22} as Future>::poll`
  --> $DIR/post-mono-higher-ranked-hang.rs:45:56
   |
LL |                 SymPerm::Dummy(_) => yield_chain(perm).await,
   |                                                        ^^^^^
   |
note: `<ops::coroutine::adapters::CoroutineFuture<C> as Future>::poll` defined here
  --> $SRC_DIR/core/src/ops/coroutine/adapters.rs:LL:COL

error: aborting due to 1 previous error

